update Register and confirm otp
